--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
+    working_directory: ~/project-poker
 
     environment:
       # Customize the JVM maximum heap limit
@@ -26,16 +26,20 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
         keys:
-          - v1-dependencies-{{ checksum "pom.xml" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies
+          - poker-{{ checksum "pom.xml" }}
 
       - run: mvn dependency:go-offline
 
       - save_cache:
         paths:
           - ~/.m2
-        key: v1-dependencies-{{ checksum "pom.xml" }}
+        key: poker-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn integration-test
+      - run: mvn package
+
+      - store_test_results:
+        path: target/surefire-reports
+
+      - store_artifacts:
+        path: target/poker-0.0.1-Snapshot.jar
