--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache:
-        keys:
-          - poker-{{ checksum "pom.xml" }}
+        key: poker-{{ checksum "pom.xml" }}
 
       - run: mvn dependency:go-offline
 
