--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,19 @@
 version: 2
 jobs:
   build:
-    docker:
-      #specify the version you desire here
-      - image: circleci/openjdk:8-openjdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
 
     working_directory: ~/project-poker
+
+    # Specify service dependencies here if necessary
+    # CircleCI maintains a library of pre-built images
+    # documented at https://circleci.com/docs/2.0/circleci-images/
+    docker:
+      #specify the version you desire here
+      - image: circleci/openjdk:8-jdk-browsers
+      - image: circleci/postgres:9.6.3-alpine
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: circle_test
 
     environment:
       # Customize the JVM maximum heap limit
