--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,11 @@
 
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
-version: 2
-jobs:
+version: 2 # use CircleCI 2.0
+jobs: # a collection of steps
   build:
 
-    working_directory: ~/project-poker
+    working_directory: ~/poker # directory where steps will run
 
     # Specify service dependencies here if necessary
     # CircleCI maintains a library of pre-built images
@@ -18,10 +18,6 @@ jobs:
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: circle_test
-
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
 
     steps:
       - checkout
