--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,10 @@ jobs: # a collection of steps
     docker:
       #specify the version you desire here
       - image: circleci/openjdk:8-jdk-browsers
-      - image: circleci/postgres:9.6.3-alpine
-        environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
+
 
     steps:
+      - apt-get install -y doxygen graphviz
       - checkout
 
       # Download and cache dependencies
@@ -34,10 +32,11 @@ jobs: # a collection of steps
           key: poker-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn package
+      - run: mvn package site
 
       - store_test_results:
           path: target/surefire-reports
 
       - store_artifacts:
           path: target/poker-0.0.1-Snapshot.jar
+
