--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs: # a collection of steps
 
 
     steps:
-      - run: apt-get install -y doxygen graphviz
+      - run: sudo apt-get install -y doxygen graphviz
       - checkout
 
       # Download and cache dependencies
