--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,20 @@ jobs: # a collection of steps
       - store_artifacts:
           path: target/poker-0.0.1-Snapshot.jar
 
+      # push documentation online
+      - add_ssh_keys:
+          fingerprints:
+              - "63:a6:f1:e2:53:db:96:9b:46:23:d2:cf:b8:49:14:a7"      
+      - run:
+          name: Deploy Documentation
+          command: |
+              mv -f target/site /tmp
+              rm -Rf *
+              git branch -D gh-pages || true
+              git checkout --orphan gh-pages
+              mv -f /tmp/site/* .
+              echo -e 'general:\n    branches:\n        ignore:\n            - /.*/\n' > circle.yml
+              echo -e '*.*\n!.gitignore\n!circle.yml\n!*.htm*\n!*.css\n!*.js\n!*.png\n!*.gif\n!*.svg\n!*.json\n!*.g4\n!org\.lightjason*\n' > .gitignore
+              git add --all .
+              git commit -m "current documentation"
+              git push -f origin gh-pages
