--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,12 @@ jobs: # a collection of steps
       #specify the version you desire here
       - image: circleci/openjdk:8-jdk-browsers
 
+    environment:
+      GIT_AUTHOR_NAME: CircleCI
+      GIT_AUTHOR_EMAIL: nobody@email.com
+      GIT_COMMITTER_NAME: CircleCI
+      GIT_COMMITTER_EMAIL: nobody@email.com
+
 
     steps:
       - run: sudo apt-get install -y doxygen graphviz
@@ -56,4 +62,4 @@ jobs: # a collection of steps
               echo -e '*.*\n!.gitignore\n!circle.yml\n!*.htm*\n!*.css\n!*.js\n!*.png\n!*.gif\n!*.svg\n!*.json\n!*.g4\n!org\.lightjason*\n' > .gitignore
               git add --all .
               git commit -m "current documentation"
-              git push -f origin gh-pages
+              git push -f gh-pages
