--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 
 !src/main/resources/static/*.html
 !src/main/resources/templates/*.html
-!src/main/resources/*.js
+!src/main/resources/**/*.js
 
 !src/analysis/**/*.xml
 !src/analysis/**/*.txt
