Implementiert eine token-basierte Anmeldung
Nach dem Erstellen bzw. Beitreten eines Tisches wird ein Token erzeugt, welcher Zusammen mit Tisch, Spieler und einem Timestamp gespeichert wird. Öffnet der User nun eine Websocket-Connection werden Tisch und Spieler anhand der "zurückgesendeten" UUID ermittelt und die Verbindung der SessionId, des Tisches und des Spielers kann erfolgen.

Gleichzeitig wird ständig anhand des Timestamps geschaut, ob die UUID schon länger als 5 min existiert. Ist dies der Fall wird diese gelöscht.

--- a/pom.xml
+++ b/pom.xml
@@ -71,12 +71,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <!-- For using Spring Reactive Programming -->
+        <!-- For using Java Tuples -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
         </dependency>
-
 
         <!-- checking -->
         <dependency>
