--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- For using Tiny-Log -->
+        <dependency>
+            <groupId>org.tinylog</groupId>
+            <artifactId>tinylog</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+
         <!-- checking -->
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -264,6 +271,8 @@
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                     <failOnWarning>true</failOnWarning>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
                         <bootclasspath>${env.JAVA5_HOME}</bootclasspath>
