--- a/pom.xml
+++ b/pom.xml
@@ -72,12 +72,6 @@
 
         <dependency>
             <groupId>org.webjars</groupId>
-            <artifactId>bootstrap</artifactId>
-            <version>4.1.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.webjars</groupId>
             <artifactId>webjars-locator</artifactId>
             <version>0.34</version>
         </dependency>
@@ -88,6 +82,12 @@
             <version>2.8.5</version>
         </dependency>
 
+        <!-- for design -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.1.1</version>
+        </dependency>
 
 
         <!-- For using HTML-Forms -->
