--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 !src/main/resources/static/*.html
 !src/main/resources/templates/*.html
 !src/main/resources/**/*.js
+!src/main/resources/**/*.css
 
 !src/analysis/**/*.xml
 !src/analysis/**/*.txt
